# solmint

./: .gitignore  README.md
backend/: Cargo.toml  app.py  requirements.txt
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: RevokeOption.tsx  ToggleOption.tsx  TokenCreator.tsx  TokenIdeaGenerator.tsx
