[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
mpl-token-metadata = "5.1.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-sdk = "2.3.0"
spl-token = "8.0.0"
