[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
zeroize = "1.3.0"  # Version that works with both solana-program and arweave-rs
solana-client = "1.18.26"  # Latest in 1.18.x series
arweave-rs = { git = "https://github.com/bobvasic/arweave-rs", rev = "79c913fbb06d8f1b4f254acbb6f53a08986c246b" }
solana-program = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "3.0"
mpl-token-metadata = "4.1.2"
tempfile = "3"
bincode = "1.3.3"
base64 = "0.22"
url = "2.5.0"